cm4all-beng-proxy (0.7.14) unstable; urgency=low

  * connection: drop connections when the limit is exceeded
  * resource-address: added BASE support
  * fcgi-client: check the request ID in response packets

 --

cm4all-beng-proxy (0.7.13) unstable; urgency=low

  * fcgi-request: duplicate socket path
  * fcgi-request: support ACTION
  * fcgi-client: provide SCRIPT_FILENAME
  * fcgi-client: append empty PARAMS packet
  * fcgi-client: try to read response before request is finished
  * fcgi-client: implement the STDERR packet
  * fcgi-client: support request headers and body
  * fcgi-stock: manage one socket per child process
  * fcgi-stock: unlink socket path after connect
  * fcgi-stock: redirect fd 1,2 to /dev/null
  * fcgi-stock: kill FastCGI processes after 5 minutes idle
  * translation: new packet PAIR for passing parameters to FastCGI

 -- Max Kellermann <mk@cm4all.com>  Thu, 14 Jan 2010 13:36:48 +0100

cm4all-beng-proxy (0.7.12) unstable; urgency=low

  * http-cache: unlock the cache item after successful revalidation
  * http-cache-memcached: pass the expiration time to memcached
  * sink-header: comprise pending data in method available()
  * header-forward: forward the Expires response header

 -- Max Kellermann <mk@cm4all.com>  Tue, 22 Dec 2009 16:18:49 +0100

cm4all-beng-proxy (0.7.11) unstable; urgency=low

  * {ajp,memcached}-client: fix dis\appearing event for duplex socket
  * memcached-client: handle EAGAIN after send()
  * memcached-client: release socket as early as possible
  * header-forward: don't forward Accept-Encoding if transformation is
    enabled
  * widget-http, inline-widget: check Content-Encoding before processing
  * file-handler: send "Vary: Accept-Encoding" for compressed response
  * header-forward: support duplicate headers
  * fcache: implemented a 60 seconds timeout
  * fcache: copy pointer to local variable before callback
  * event2: refresh timeout after event has occurred
