@@ -3,6 +3,7 @@ cm4all-beng-proxy (0.7.14) unstable; urgency=low
   * connection: drop connections when the limit is exceeded
   * resource-address: added BASE support
   * fcgi-client: check the request ID in response packets
+  * http-client: check response body when request body is closed
 
  --
 
